added mobile responsible and header sticky

--- a/css/styles.css
+++ b/css/styles.css
@@ -340,11 +340,11 @@ footer .column i + i {
   padding: 0 0.5em;
 }
 
-/* .sticky {
+.sticky {
   position: fixed;
   top: 0;
   width: 100%;
   background: rgba(0, 0, 0, 0.815);
   z-index: 9999;
   transition: all 1.5s ease;
-} */
+}
